<resources>
    <string name="app_name">Sunrise App</string>
    <string name="menu_day_phase_option_title">Фаза дня</string>
    <string name="menu_speed_up_option_title">Ускорение времени</string>
    <string name="sunrise_title">Рассвет</string>
    <string name="noon_title">Полдень</string>
    <string name="sunset_title">Закат</string>
    <string name="night_title">Полночь</string>
    <string name="day_length_title">Длина дня</string>
    <string name="menu_sunrise_option_text">Рассвет</string>
    <string name="menu_noon_option_text">Полдень</string>
    <string name="menu_sunset_option_text">Закат</string>
    <string name="menu_night_option_text">Полночь</string>
    <string name="menu_x1_speed_up_option_text">Обычная скорость</string>
    <string name="menu_x10_speed_up_option_text">В 10 раз быстрее</string>
    <string name="menu_x100_speed_up_option_text">В 100 раз быстрее</string>
    <string name="menu_x1000_speed_up_option_text">В 1000 раз быстрее</string>
    <string name="feels_like_title">Ощущ. как</string>
    <string name="temp_min_title">Темп. макс</string>
    <string name="temp_max_title">Темп. мин</string>
    <string name="humidity_title">Влажность</string>
    <string name="pressure_title">Давление</string>
    <string name="sun_content_description">Солнце</string>
    <string name="ground_content_description">Земля</string>
    <string name="cloud_content_description">Облако</string>
    <string name="choose_place_button_content_description">Выбрать место</string>
    <string name="about_app_content_description">О приложении</string>
    <string name="menu_content_description">Меню</string>
    <string name="reset_time_content_description">Сбросить время</string>
    <string name="cloudiness_icon_content_description">Облако</string>
    <string name="back_button_text">Назад</string>
    <string name="select_button_text">Выбрать</string>
    <string name="maps_api_text">Приложение использует Яндекс Карты. Условия использования Яндекс Карт: https://yandex.ru/legal/maps_api/</string>
    <string name="sun_api_text">Приложение работает на https://sunrisesunset.io/</string>
    <string name="moon_api_text">Приложение работает на https://api.farmsense.net/</string>
    <string name="weather_api_text">Приложение работает на https://openweathermap.org/api</string>
    <string name="geocoder_api_text">Приложение работает на https://yandex.ru/maps-api/products/geocoder-api</string>
    <string name="compass_content_description">Компас</string>
    <string name="north_symbol">С</string>
    <string name="south_symbol">Ю</string>
    <string name="west_symbol">З</string>
    <string name="east_symbol">В</string>
    <string name="compass_arrow_content_description">Стрелка компаса</string>
</resources>