<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/compas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/compas"
        android:contentDescription="@string/compass_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/north_symbol"
        android:textSize="@dimen/infoText"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/compas"
        app:layout_constraintBottom_toTopOf="@id/compas"
        app:layout_constraintStart_toStartOf="@id/compas"
        app:layout_constraintEnd_toEndOf="@id/compas"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/south_symbol"
        android:textSize="@dimen/infoText"

        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/compas"
        app:layout_constraintBottom_toBottomOf="@id/compas"
        app:layout_constraintStart_toStartOf="@id/compas"
        app:layout_constraintEnd_toEndOf="@id/compas"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/west_symbol"
        android:textSize="@dimen/infoText"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/compas"
        app:layout_constraintBottom_toBottomOf="@id/compas"
        app:layout_constraintStart_toStartOf="@id/compas"
        app:layout_constraintEnd_toStartOf="@id/compas"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/east_symbol"
        android:textSize="@dimen/infoText"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/compas"
        app:layout_constraintBottom_toBottomOf="@id/compas"
        app:layout_constraintStart_toEndOf="@id/compas"
        app:layout_constraintEnd_toEndOf=   "@id/compas"/>
    <ImageView
        android:id="@+id/compassArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow_long"
        android:contentDescription="@string/compass_arrow_content_description"
        app:layout_constraintTop_toTopOf="@id/compas"
        app:layout_constraintBottom_toBottomOf="@id/compas"
        app:layout_constraintStart_toStartOf="@id/compas"
        app:layout_constraintEnd_toEndOf="@id/compas"
        />


</androidx.constraintlayout.widget.ConstraintLayout>