<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scene"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:id="@+id/sky"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sky_day1"
        app:layout_constraintBottom_toTopOf="@id/ground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/sun"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/sun"

        android:contentDescription="@string/sun_content_description"
        app:layout_constraintBottom_toTopOf="@id/ground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <FrameLayout
        android:id="@+id/moon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="@id/ground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/ground_day"
        android:contentDescription="@string/ground_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/cloud"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:background="@drawable/cloud"

        android:contentDescription="@string/cloud_content_description"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@id/ground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <FrameLayout
        android:id="@+id/placeToDraw"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@id/ground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/clockText"

        app:layout_constraintBottom_toBottomOf="@id/sky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:text="23.02.2022 19:09:53" />

    <ImageView
        android:id="@+id/placeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/marker_svg"
        android:contentDescription="@string/choose_place_button_content_description"
        android:paddingHorizontal="10dp"


        app:layout_constraintEnd_toEndOf="@id/menuButton"
        app:layout_constraintStart_toStartOf="@id/menuButton"
        app:layout_constraintTop_toBottomOf="@id/resetButton" />

    <ImageView
        android:id="@+id/aboutButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/information_circle_contained"
        android:contentDescription="@string/about_app_content_description"
        android:paddingHorizontal="10dp"
        android:textColor="@color/white"
        android:textSize="34sp"


        app:layout_constraintEnd_toEndOf="@id/menuButton"
        app:layout_constraintStart_toStartOf="@id/menuButton"
        app:layout_constraintTop_toBottomOf="@id/placeButton" />

    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/dots_menu"

        android:contentDescription="@string/menu_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/resetButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/reset"

        android:contentDescription="@string/reset_time_content_description"
        app:layout_constraintEnd_toEndOf="@id/menuButton"
        app:layout_constraintStart_toStartOf="@id/menuButton"
        app:layout_constraintTop_toBottomOf="@id/menuButton"

        />
    <TextView
        android:id="@+id/placeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="100dp"
        android:padding="10dp"
        tools:text="Новосибирская область"
        android:textSize="@dimen/infoText"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/info_element_background"
        android:visibility="invisible"
        tools:visibility="visible"
        />
    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="5℃"
        android:textSize="@dimen/degreesText"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:layout_marginStart="40dp"
        />

    <TextView
        android:id="@+id/weatherName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Облачно"
        android:textSize="@dimen/weatherName"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/temperatureText"
        app:layout_constraintEnd_toEndOf="@id/temperatureText"
        app:layout_constraintTop_toBottomOf="@id/temperatureText"
        />



</androidx.constraintlayout.widget.ConstraintLayout>