<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ground_day">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tempView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/info_element_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/atmosphereView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:constraint_referenced_ids="feelsLikeTitle,feelsLikeText,temperatureMinTitle,temperatureMaxText,temperatureMaxTitle,temperatureMinText"
            app:flow_horizontalStyle="spread_inside"
            app:flow_verticalGap="6dp"
            app:flow_maxElementsWrap="2"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/feelsLikeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like_title"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText" />

        <TextView
            android:id="@+id/temperatureMaxTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_min_title"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText" />


        <TextView
            android:id="@+id/temperatureMinTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_max_title"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText" />

        <TextView
            android:id="@+id/feelsLikeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"
            tools:text="10℃" />

        <TextView
            android:id="@+id/temperatureMaxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"
            tools:text="13℃" />


        <TextView
            android:id="@+id/temperatureMinText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"
            tools:text="2℃" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/atmosphereView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/info_element_background"
        app:layout_constraintBottom_toBottomOf="@id/tempView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tempView"
        app:layout_constraintTop_toTopOf="@id/tempView"
        app:layout_constraintVertical_bias="0.534">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowAtmosphere"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:constraint_referenced_ids="humidityTitle,humidityText,pressureTitle,pressureText"
            app:flow_horizontalStyle="spread_inside"
            app:flow_verticalGap="6dp"
            app:flow_maxElementsWrap="2"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/humidityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_title"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText" />

        <TextView
            android:id="@+id/humidityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"

            tools:text="100%" />

        <TextView
            android:id="@+id/pressureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_title"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText" />

        <TextView
            android:id="@+id/pressureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"

            tools:text="746мм" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>