<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dayInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ground_day">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/windView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginVertical="4dp"
        android:background="@drawable/info_element_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sunView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_min="wrap">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowWind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:constraint_referenced_ids="cloudinessIcon,cloudinessText,compassView,windSpeedText,windDegreeText"
            app:flow_horizontalStyle="spread_inside"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="6dp"
            app:flow_verticalGap="6dp"
            app:flow_verticalAlign="center"
            app:flow_maxElementsWrap="3"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/cloudinessIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:contentDescription="@string/cloudiness_icon_content_description"
            android:scaleType="centerCrop"
            android:background="@drawable/cloud" />


        <TextView
            android:id="@+id/windDegreeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"
            tools:text="С/З"
            />

        <TextView
            android:id="@+id/cloudinessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"

            tools:text="85%" />

        <TextView
            android:id="@+id/windSpeedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"
            tools:text="12.2 м/с" />

        <include
            android:id="@+id/compassView"
            layout="@layout/compass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sunView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginVertical="4dp"
        android:background="@drawable/info_element_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/windView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constrainedHeight="true"
        >

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flowDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:constraint_referenced_ids="dayLengthTitle,dayLengthText,sunriseTitle,sunriseText,sunsetTitle,sunsetText"
            app:flow_horizontalStyle="spread_inside"
            app:flow_verticalGap="6dp"
            app:flow_maxElementsWrap="2"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dayLengthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_length_title"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"/>

        <TextView
            android:id="@+id/sunriseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise_title"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText" />

        <TextView
            android:id="@+id/sunsetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset_title"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText" />

        <TextView
            android:id="@+id/dayLengthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"
            tools:text="20:35" />

        <TextView
            android:id="@+id/sunriseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"
            tools:text="20:35" />

        <TextView
            android:id="@+id/sunsetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/infoText"
            tools:text="20:35" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>